[Chromoting] Avoid crashing when media foundation is not present on the system

According to a very old bug,
(https://bugs.chromium.org/p/chromium/issues/detail?id=339678),
we should LoadLibrary(), i.e.
MediaFoundationVideoEncodeAccelerator::PreSandboxInitialization() before calling
MFStartup(), i.e. InitializeMediaFoundation() to avoid crashes within DelayLoad.

See the bug for details.

Bug: chromium:775563
Change-Id: I7c54569304b8806095a32b009bed5bec287e91f1
Reviewed-on: https://chromium-review.googlesource.com/723774
Commit-Queue: Zijie He <zijiehe@chromium.org>
Reviewed-by: Lambros Lambrou <lambroslambrou@chromium.org>
Cr-Commit-Position: refs/heads/master@{#509563}