remoting/host/host_attributes.cc
@@ -118,9 +118,9 @@ std::string GetHostAttributes() {
     }
   }
 
-  if (media::InitializeMediaFoundation() &&
-      media::MediaFoundationVideoEncodeAccelerator
-      ::PreSandboxInitialization()) {
+  if (media::MediaFoundationVideoEncodeAccelerator
+      ::PreSandboxInitialization() &&
+      media::InitializeMediaFoundation()) {
     result.push_back("HWEncoder");
   }
 #elif defined(OS_LINUX)
